# rust_poc

./: .env  .gitignore  Cargo.toml
src/: main.rs
src/async_operation/: async_operation.rs  mod.rs
src/kafka/: kafka_consumer.rs  kafka_producer.rs  mod.rs  readme.md
src/logging/: logging.rs  mod.rs
src/postgres/: mod.rs  postgres.rs
src/redis/: mod.rs  readme.md  redis_operations.rs
src/rest_api/: mod.rs  rest_api-readme.md  rest_api.rs
src/work_with_json/: mod.rs  work_with_json.rs
