[package]
name = "rust_poc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# common
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }

# rest_api dependencies

actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# log_files dependencies

log = "0.4"
log4rs = "1.2.0"
chrono = "0.4"
reqwest = "0.12.4"

# kafka dependencies
futures = "0.3"
kafka = "0.10.0"